			smaller cut size, since array is much smaller. Still have a bit of issue with
			the pointer in small minimap.
		Updated spelling in details view.
### current ###
nate lust:	Fixed a bug that was causing a segfault on some machines, when the sleeper theread 
			not being properly terrminated.
		Fixed a bug where if there was a zero or negitive number there was a problem when
			switching to log view due to log of negitive number or zero
		Added vertical and horrizontal cut views to the details dialog box.
		Fixed a bug where the figures in the details view were not being drawn properly when
			a resize event occurs.
		Added a basic about message.
		Implemented preference dialog. The user can now choose the preview size, the origin
			location (when this happens the image is inverted, and the preivew is properly
			inverted as well), the default cutsize for the details view, and wether the
			details view draws over its own window or opens multiple windows.
		Added a y and x cut window, able to be hidden or shown, need to add the ability to draw
			the actual cut
		Updated the color to be more usefull
		Fixed an issue where when you had a resized window, then changed the scaling it would 
			redraw the frame at full size. This now behaives as expected. changing the 
			flux scale now preserves the zoom. This is done by recording the ax limits before
			redraw and resetting the limits after the draw. This gets overridden when loading
			a new frame. 
		Addes the virtical and horrizontal profile view that track the mouse motion. OpenGL can
			be used to accellerate the drawing if pyqt has the qtopengl binding 
		Added a check to the embed class. If the function fails to fork a separate process inorder
			to free the terminal, it should place NTV in a separate thread
		Updated the system executeable to be ntviewer, as the previous ntv had problems with OS X
			in that OS X dose not respect case, and copied the folder NTV over the executeable