@@ -1,0 +1,13 @@
+#! /usr/bin/env python
+
+from NTV.NTV import *
+import sys
+app = QApplication(sys.argv)
+if len(sys.argv) > 1:
+	filez = sys.argv[1]
+else:
+        filez = None
+plot = NTV(file=filez)
+plot.show()
+sys.exit(app.exec_())
+
